WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82165
[BlackBerry] Cookies mismatch when login to gmail.
https://bugs.webkit.org/show_bug.cgi?id=82165
Summary
[BlackBerry] Cookies mismatch when login to gmail.
Jason Liu
Reported
2012-03-25 21:14:18 PDT
steps: ------------------ 1) Clear cookies/cache 2) Visit gmail.com and login. 3) Open a second tab and visit Gmail.com 4) Open a third tab and visit Google.com 5) Click Gmail from Google.com page Expected: --------- 2) User is able to login to Gmail 3) User is able to login to Gmail 4) Google.com loads 5) User is able to login to Gmail Actual: ------- 3) User is prompted with error gmail accounts page (screen shot attached) 4) Google.com loads 5) User is able to login to Gmail
Attachments
Patch
(3.45 KB, patch)
2012-03-26 03:26 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(3.11 KB, patch)
2012-03-26 03:41 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-03-26 03:26:06 PDT
Created
attachment 133764
[details]
Patch
Jason Liu
Comment 2
2012-03-26 03:41:10 PDT
Created
attachment 133765
[details]
Patch
WebKit Review Bot
Comment 3
2012-03-26 05:42:58 PDT
Comment on
attachment 133765
[details]
Patch Clearing flags on attachment: 133765 Committed
r112080
: <
http://trac.webkit.org/changeset/112080
>
WebKit Review Bot
Comment 4
2012-03-26 05:43:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug