[BlackBerry] Cookies mismatch when login to gmail. https://bugs.webkit.org/show_bug.cgi?id=82165

Redirection's response can add or update cookies. The cookies of ResourceRequest is dirty
in this case. We shouldn't copy the dirty cookie header from ResourceRequest to PlatformRequest
for redirection loading.

This issue didn't happen before because we used m_cookieData not the cookie header.
Now we use the cookie header to avoid storing double cookie's data, and m_cookieData is removed.

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-03-26
Reviewed by George Staikos.

No new tests. It is a refactoring issue.

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::initializePlatformRequest):

Canonical link: https://commits.webkit.org/99524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112080 268f45cc-cd09-0410-ab3c-d52691b4dbfc